# ISpyMSI

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  README.md  landmarks.csv  mass-to-charge-ratios.csv  peaks.csv  pyproject.toml  requirements_dev.conda.yaml
scripts/: extract_mass_spec_info.py  extract_patches.py  plot_patches.py  plot_predictions.py  plot_sample_landmarks.py  project_masks.py  record_landmarks.py  test_segmentation_model.py  train_segmentation_model.py  visualise_he_msi_pair.py  visualise_representations.py
src/ispy_msi/: __init__.py  file_utils.py  geojson_utils.py  landmark_utils.py  mask_utils.py  matplotlibrc  metrics.py  models.py  msi_extraction_utils.py  patch_extraction_utils.py  patch_metadata_utils.py  plotting.py  transforms.py
tests/: test_basic_import.py  test_metrics.py  test_patch_extraction_utils.py
