[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "ispy_msi"
version = "0.1.0"
description = "Mass spec. tissue segmentation project."

authors = [
  { name="Jim Denholm", email="jd949@cam.ac.uk"},
]
readme = "README.md"

dependencies = ["pyimzML==1.5", "pandas==2.2", "pandas-stubs", "pyarrow==19.0", "scikit-image==0.25", "torch==2.3", "torchvision==0.18", "tifffile==2025.2.18", "matplotlib==3.10", "scikit-learn==1.6", "torch_tools @ git+https://github.com/jdenholm/TorchTools.git@v0.13.0", "tiffslide==2.4", "shapely==2.0.7"]

# [project.urls]
# "Homepage" = ""


[tool.setuptools]
package-dir = {}

[tool.setuptools.package-data]
torch_tools = ["py.typed"]